--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ting's knowledge base</title>
+    <title>ting's things base</title>
     <style>
         body {
             display: flex;
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div id="explorer">
-        <h2>Ting's knowledge base</h2>
+        <h2>Ting's things base</h2>
         <div class="folder">Projects
             <div class="nested">
                 <div class="folder">Web Development
